# workbench-core

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  restart.sh  workbench.yaml  workbench.yaml.example
docs/: AGENT_SYSTEM.md  DOCUMENT_MODEL_SPEC.md  MCP_CLIENT_SPEC_v2.2.md
tests/: mock_providers.py  mock_tools.py  test_agent_investigation_m6.py  test_artifacts.py  test_audit_rotation.py  test_backends.py  test_context_pills.py  test_document_store.py  test_e2e.py  test_evidence_connectors_m5.py  test_evidence_m2.py  test_local_ingest_m4.py  test_mcp_client.py  test_mcp_server.py  test_memory_tools.py  test_orchestrator.py  test_policy.py  test_recipes.py  test_registry.py  test_review_narrative_m3.py  test_session.py  test_tool_call_assembler.py  test_validation.py
workbench/: config.py  types.py  workspace.py
workbench/backends/: __init__.py  base.py  bridge.py  catalog.py  demo.py  local.py  router.py  ssh.py
workbench/cli/: __init__.py  app.py  chat.py  output.py
workbench/documents/: __init__.py  indexer.py  ingest.py  store.py  templates.py
workbench/llm/: __init__.py  router.py  token_counter.py  tool_call_assembler.py  types.py
workbench/mcp/: __init__.py  client.py  server.py
workbench/memory/: __init__.py  file_provider.py  provider.py  sqlite_provider.py  tools.py
workbench/orchestrator/: __init__.py  core.py  events.py
workbench/prompts/: __init__.py  conventions.py  system.py  tool_discipline.py
workbench/recipes/: __init__.py  executor.py  registry.py  schema.py
workbench/session/: __init__.py  artifacts.py  (+4 more)
(+50 files in other folders)
