[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workbench-core"
version = "0.1.0"
description = "Portable support and diagnostics workbench runtime"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "jsonschema>=4.20",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "rich>=13.0",
    "typer>=0.9",
    "textual>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["tiktoken>=0.5"]
remote_sdk = ["anthropic>=0.25", "openai>=1.0"]
providers = ["workbench-core[openai,remote_sdk]"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.entry-points."workbench.tools"]

[tool.setuptools.packages.find]
include = ["workbench*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
